Add GoDish, new masthead photo, new resume

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
       <!-- Masthead-->
       <header class="masthead">
           <div class="container h-100">
-              <div class="row h-100 align-items-center justify-content-center text-center">
+              <div class="row h-100 align-items-center justify-content-center">
                   <div class="col-lg-10 align-self-end">
-                      <h1 class="text-white">Hello World!</br> I'm <b>Brian</b></h1>
+                      <h1 class="text-black">Hello World!</br> I'm <b>Brian</b></h1>
                       <hr class="divider my-4" />
                   </div>
                   <div class="col-lg-8 align-self-baseline">
@@ -109,56 +109,58 @@
               <!-- Project 3 -->
                 <div class="col-lg-4 col-sm-6">
                   <a class="portfolio-box" href="https://bchin224.github.io/weather-finder-app/">
-                    <img class="img-fluid" src="assets/img/portfolio/weather_finder_650x350.jpg" alt="Weather Finder App" />
+                    <img class="img-fluid" src="assets/img/portfolio/GoDish_650x350.jpg" alt="Go Dish" />
                       <div class="portfolio-box-caption p-3">
-                        <div class="project-name">Weather Finder App</div>
+                        <div class="project-name">Go Dish</div>
                         <div class="project-category text-white-75">
-                          A JavaScript and React application to get weather info from the Open Weather Map API.
-                          CSS was adjusted to match a given jpg as closely as possible, but I then added a
-                          responsive layouts to it for mobile functionality.
+                          A React application made to support local small business restaurants get discovered.
+                          Restaurants would upload photos of their best dish and users would swipe right on the ones
+                          they're interested in. After that, the restaurant's info would be pulled from the data provided
+                          by the Yelp API so users can learn more about the establishment.
                         </div>
                       </div>
                   </a>
                 </div>
               <!-- Project 4 -->
-                <div class="col-lg-4 col-sm-6">
-                  <a class="portfolio-box" href="https://bchin224.github.io/days_since_client/">
-                    <img class="img-fluid" src="assets/img/portfolio/days_since_650x350.jpg" alt="Days Since" />
-                      <div class="portfolio-box-caption p-3">
-                        <div class="project-name">Days Since</div>
-                        <div class="project-category text-white-75">
-                          A JavaScript and express full-stack application, Days Since allows a user to save
-                          significant dates in their lives and determine how many days have passed since then.
-                        </div>
-                      </div>
-                  </a>
-                </div>
-              <!-- Project 5 -->
-                <div class="col-lg-4 col-sm-6">
-                  <a class="portfolio-box" href="https://bchin224.github.io/momentum-clone/">
-                    <img class="img-fluid" src="assets/img/portfolio/momentum_clone_650x350.jpg" alt="Momentum Clone" />
-                      <div class="portfolio-box-caption p-3">
-                        <div class="project-name">Google Momentum Clone</div>
-                        <div class="project-category text-white-75">
-                          A clone of the Google Chrome extension using React, JavaScript, the Unsplash API,
-                          the Open Weather API, and Moment.js library.
-                        </div>
-                      </div>
-                  </a>
-                </div>
-              <!-- Project 6 -->
-                <div class="col-lg-4 col-sm-6">
-                  <a class="portfolio-box" href="https://bchin224.github.io/project1_tictactoe/">
-                    <img class="img-fluid" src="assets/img/portfolio/tic_tac_toe_650x350.jpg" alt="Tic Tac Toe" />
+              <div class="col-lg-4 col-sm-6">
+                <a class="portfolio-box" href="https://bchin224.github.io/weather-finder-app/">
+                  <img class="img-fluid" src="assets/img/portfolio/weather_finder_650x350.jpg" alt="Weather Finder App" />
                     <div class="portfolio-box-caption p-3">
-                      <div class="project-name">Tic Tac Toe</div>
+                      <div class="project-name">Weather Finder App</div>
                       <div class="project-category text-white-75">
-                        A JavaScript based full-stack application where a user can sign up, sign in, and then
-                        play some tic-tac-toe. The final moves, results and number of games played are saved.
+                        A React application to get weather info from the Open Weather Map API.
+                        CSS was adjusted to match a given jpg as closely as possible, but I then added a
+                        responsive layouts to it for mobile functionality.
                       </div>
                     </div>
-                  </a>
-                </div>
+                </a>
+              </div>
+              <!-- Project 5 -->
+              <div class="col-lg-4 col-sm-6">
+                <a class="portfolio-box" href="https://bchin224.github.io/days_since_client/">
+                  <img class="img-fluid" src="assets/img/portfolio/days_since_650x350.jpg" alt="Days Since" />
+                    <div class="portfolio-box-caption p-3">
+                      <div class="project-name">Days Since</div>
+                      <div class="project-category text-white-75">
+                        A JavaScript and express full-stack application, Days Since allows a user to save
+                        significant dates in their lives and determine how many days have passed since then.
+                      </div>
+                    </div>
+                </a>
+              </div>
+              <!-- Project 6 -->
+              <div class="col-lg-4 col-sm-6">
+                <a class="portfolio-box" href="https://bchin224.github.io/momentum-clone/">
+                  <img class="img-fluid" src="assets/img/portfolio/momentum_clone_650x350.jpg" alt="Momentum Clone" />
+                    <div class="portfolio-box-caption p-3">
+                      <div class="project-name">Google Momentum Clone</div>
+                      <div class="project-category text-white-75">
+                        A clone of the Google Chrome extension using React, JavaScript, the Unsplash API,
+                        the Open Weather API, and Moment.js library.
+                      </div>
+                    </div>
+                </a>
+              </div>
             </div>
         </div>
       </div>
@@ -283,7 +285,7 @@
       <section class="page-section bg-dark text-white" id="resume">
           <div class="container text-center">
               <h2 class="mb-4">Download my resume</h2>
-              <a class="btn btn-light btn-xl" href="https://drive.google.com/file/d/1jeLR98H5hdptl3Rs2JXR2pKnUsjeyO-0/view?usp=sharing">Resume</a>
+              <a class="btn btn-light btn-xl" href="https://drive.google.com/file/d/1V4RosWFrt6h_AIb0ff12dCMcvuRLQyNo/view?usp=sharing">Resume</a>
           </div>
       </section>
       <!-- Contact-->
