Fix masthead text, update About Me

--- a/index.html
+++ b/index.html
@@ -41,11 +41,8 @@
           <div class="container h-100">
               <div class="row h-100 align-items-center justify-content-center">
                   <div class="col-lg-10 align-self-end">
-                      <h1 class="text-black">Hello World!</br> I'm <b>Brian</b></h1>
-                      <hr class="divider my-4" />
-                  </div>
-                  <div class="col-lg-8 align-self-baseline">
-                      <p class="text-white-75 font-weight-light mb-5">
+                      <h1 class="mast-text">Hello World!</br> I'm <b>Brian</b></h1>
+                      <p class="mast-text font-weight-light mb-5">
                         Full(er)-Stack Software Developer
                       </p>
                   </div>
@@ -60,14 +57,15 @@
                     <h2 class="text-white mt-0">About <b>Me</b></h2>
                     <hr class="divider my-4" />
                     <p class="text-white-50 mb-2">
-                      My name is Brian, I'm based in New York City and I consider myself a <i>Full(er)-Stack Developer.</i>
-                      Why? Because I spent almost a decade as a graphic designer in the world of concerts and entertainment
-                      and now I'm ready to solve some different kinds of problems! I can code your back-end, code your
-                      front-end, AND design it all too! I love challenges and rarely back down from one (that's how I ended
-                      up running my first marathon)so let's solve some problems together!
+                      My name is Brian, I'm a <i>Full(er)-Stack Engineer.</i> Why? Because I spent almost 10 years as a graphic designer
+                      in the world of concerts and entertainment and now I'm ready to solve some different kinds of problems! After dabbling in
+                      Python and basic web developement, I finally decided to switch careers in 2020 to combine problem solving, technology and
+                      creativity and joined General Assembly's Software Engineering Immersive Program, a 12-week bootcamp to begin my career as
+                      a Software Developer. Now, I can code your back-end, code your front-end, AND design it all too! I love challenges and
+                      rarely back down from one (that's how I ended up running my first marathon) so let's solve some problems together!
                     </p>
                     <p class="text-white-50 mb-2">
-                      I love learning new skills, making music, climbing, traveling, coding, and eating. Mostly eating...
+                      You can also find me making music, climbing, traveling, and eating. Mostly eating...
                     </p>
                   </div>
               </div>
