--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                   <div class="col-lg-10 align-self-end">
                       <h1 class="mast-text">Hello World!</br> I'm <b>Brian</b></h1>
                       <p class="mast-text font-weight-light mb-5">
-                        Full(er)-Stack Software Developer
+                        Full(er)-Stack Software Engineer
                       </p>
                   </div>
               </div>
