--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <header class="masthead">
           <div class="container h-100">
               <div class="row h-100 align-items-center justify-content-center">
-                  <div class="col-lg-10 align-self-end">
+                  <div class="col-lg-10">
                       <h1 class="mast-text">Hello World!</br> I'm <b>Brian</b></h1>
                       <p class="mast-text font-weight-light mb-5">
                         Full(er)-Stack Software Engineer
@@ -106,7 +106,7 @@
                 </div>
               <!-- Project 3 -->
                 <div class="col-lg-4 col-sm-6">
-                  <a class="portfolio-box" href="https://bchin224.github.io/weather-finder-app/">
+                  <a class="portfolio-box" href="https://godishapp.github.io/frontend/#/">
                     <img class="img-fluid" src="assets/img/portfolio/GoDish_650x350.jpg" alt="Go Dish" />
                       <div class="portfolio-box-caption p-3">
                         <div class="project-name">Go Dish</div>
