Adjusting meta for linkedin featured thumbnail

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
+    <meta name="title" property="og:title" content="Software Engineer | Brian Chin" />
+    <meta property="og:type" content="Website" />
+    <meta name="image" property="og:image" content="https://i.imgur.com/39dSLkT.png" />
+    <meta name="description" property="og:description" content="Software Engineer | Brian Chin" /><meta name="author" content="Brian Chin" />
   </head>
   <body id="page-top">
       <!-- Navigation-->
