Fix thumbnail for linkedin

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link href="css/styles.css" rel="stylesheet" />
     <meta name="title" property="og:title" content="Software Engineer | Brian Chin" />
     <meta property="og:type" content="Website" />
-    <meta name="image" property="og:image" content="https://i.imgur.com/39dSLkT.png" />
+    <meta name="image" property="og:image" content="https://i.imgur.com/sMvbcpB.png" />
     <meta name="description" property="og:description" content="Software Engineer | Brian Chin" /><meta name="author" content="Brian Chin" />
   </head>
   <body id="page-top">
