--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
       <!-- Resume -->
       <section class="page-section bg-dark text-white" id="resume">
           <div class="container text-center">
-              <h2 class="mb-4">Download my resume</h2>
+              <h2 class="mb-4">View my resume</h2>
               <a class="btn btn-light btn-xl" href="https://drive.google.com/file/d/1V4RosWFrt6h_AIb0ff12dCMcvuRLQyNo/view?usp=sharing">Resume</a>
           </div>
       </section>
