--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
       <section class="page-section bg-dark text-white" id="resume">
           <div class="container text-center">
               <h2 class="mb-4">View My Resume</h2>
-              <a class="btn btn-light btn-xl" href="https://drive.google.com/file/d/1V4RosWFrt6h_AIb0ff12dCMcvuRLQyNo/view?usp=sharing">Resume</a>
+              <a class="btn btn-light btn-xl" href="https://docs.google.com/document/d/1EKoEhc-K1F43WKDe58CIospS8sczdmDaexmAbN_Qa2k/edit?usp=sharing">Resume</a>
           </div>
       </section>
       <!-- Contact-->
