--- a/index.html
+++ b/index.html
@@ -109,15 +109,12 @@
                 </div>
               <!-- Project 3 -->
                 <div class="col-lg-4 col-sm-6">
-                  <a class="portfolio-box" href="https://godishapp.github.io/frontend/#/">
-                    <img class="img-fluid" src="assets/img/portfolio/GoDish_650x350.jpg" alt="Go Dish" />
+                  <a class="portfolio-box" href="https://rosini-engineering.vercel.app/">
+                    <img class="img-fluid" src="assets/img/portfolio/rosini_650x350.jpg" alt="Rosini Engineering" />
                       <div class="portfolio-box-caption p-3">
-                        <div class="project-name">Go Dish</div>
+                        <div class="project-name">Rosini Engineering</div>
                         <div class="project-category text-white-75">
-                          A React application made to support local small business restaurants get discovered.
-                          Restaurants would upload photos of their best dish and users would swipe right on the ones
-                          they're interested in. After that, the restaurant's info would be pulled from the data provided
-                          by the Yelp API so users can learn more about the establishment.
+                          A Nest.js websitte made for a NYC based engineering firm to showcase their work and services.
                         </div>
                       </div>
                   </a>
