--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                       <div class="portfolio-box-caption p-3">
                         <div class="project-name">Rosini Engineering</div>
                         <div class="project-category text-white-75">
-                          A Nest.js websitte made for a NYC based engineering firm to showcase their work and services.
+                          A Next.js websitte made for a NYC based engineering firm to showcase their work and services.
                         </div>
                       </div>
                   </a>
