update about me

--- a/index.html
+++ b/index.html
@@ -61,11 +61,9 @@
                     <hr class="divider my-4" />
                     <p class="text-white-50 mb-2">
                       My name is Brian, I'm a <i>Full(er)-Stack Engineer.</i> Why? Because I spent almost 10 years as a graphic designer
-                      in the world of concerts and entertainment and now I'm ready to solve some different kinds of problems! After dabbling in
-                      Python and basic web developement, I finally decided to switch careers in 2020 to combine problem solving, technology and
-                      creativity and joined General Assembly's Software Engineering Immersive Program, a 12-week bootcamp to begin my career as
-                      a Software Developer. Now, I can code your back-end, code your front-end, AND design it all too! I love challenges and
-                      rarely back down from one (that's how I ended up running my first marathon) so let's solve some problems together!
+                      in the world of concerts and entertainment and now I code too! Currently developing web applications for the best
+                      plush toy company in the world. I love challenges and rarely back down from one
+                      (that's how I ended up running my first marathon) so let's make some cool stuff together!
                     </p>
                     <p class="text-white-50 mb-2">
                       You can also find me making music, climbing, traveling, and eating. Mostly eating...
