--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                   </a>
                 </div>
                 <div class="col-lg-4 col-sm-4 text-center">
-                  <a href="mailto:brianpchin1@gmail.com">
+                  <a href="mailto:brianchin.dev@gmail.com">
                     <img class="mb-2 text-muted" src="assets/img/logos/email_70x70.svg" alt="email">
                     <div class="text-muted">Email</div>
                   </a>
